# roscamp-repo-1

./: .gitignore  README.md  REQUIREMENTS.md
.github/: BRANCH_PROTECTION_GUIDE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-merge-develop.yml
apps/admin_ui/: cam_test_ui.py  index.html  package-lock.json  package.json  vite.config.js
apps/admin_ui/src/: App.jsx
apps/kiosk_ui/: kiosk_api_client.py  kiosk_category_brand.py  kiosk_home.py  kiosk_information.py  kiosk_payment.py  kiosk_payment_complete.py  kiosk_search.py  kiosk_search_result.py  kiosk_tryon.py  kiosk_tryon_another.py  kiosk_tryon_arrive.py  kiosk_tryon_delivery.py  requirements.txt
apps/phone_ui/: env  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/phone_ui/src/: App.tsx
docker/compose/: ai_server.override.yml  main_server.override.yml
moosinsa_project/: .gitignore  README.md
moosinsa_project/services/ai_server/: docker-compose.yml
services/ai_server/llm/: Dockerfile  llm_server.py  llm_server_2.py  mllm_server.py
services/ai_server/vision/: Dockerfile  cv_server.py  (+2 more)
services/fms/: Dockerfile  requirements.txt
services/main_server/: docker-compose.yml  nohup.out  requirements.txt  reset_stock.py  test_scenarios.py
src/devices/sshopy/common/moosinsa_navigation/: CMakeLists.txt  package.xml
src/devices/sshopy/common/moosinsa_navigation/behavior_trees/: navigate_to_pose_custom.xml
src/devices/sshopy/common/moosinsa_navigation/config/: locations.yaml
src/devices/sshopy/common/moosinsa_navigation/launch/: bringup.launch.xml  map_building.launch.xml  nav2.launch.xml  web_slam.launch.xml
src/devices/sshopy/common/moosinsa_navigation/maps/: README.md  keepout_mask.yaml
src/devices/sshopy/common/moosinsa_navigation/params/: mapper_params.yaml  nav2_params.yaml
src/devices/sshopy/common/moosinsa_navigation/scripts/: robot_nodes.py
(+107 files in other folders)
