<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>moosinsa_navigation</n>
  <version>0.1.0</version>
  <description>Moosinsa 세트장(2m*1m) 맞춤 네비게이션 패키지. vendor/pinky_navigation을 오버라이드.</description>
  <maintainer email="junghyun1217@example.com">junghyun</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>pinky_navigation</depend>
  <depend>pinky_description</depend>
  <depend>pinky_bringup</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>slam_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
